<resources>
    <string name="app_name">League of Avengers</string>
    <string name="home">HomeButton</string>
    <string name="cart">CartButton</string>
    <string name="checkout">CHECKOUT</string>
    <string name="cartHeader">Your Cart</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="signup">SignUp</string>
    <string name="user">Guest</string>
    <string name="preference_file_key">Custom Login</string>
    <string name="preference_file_key_login">Login</string>
    <string name="preference_file_key_signup">Custom SignUp</string>
    <string name="price">product price</string>
    <string name="product_name">product name</string>
    <string name="product_image">product image</string>
    <string name="product_price">Product Price</string>
    <string name="buy_now">BUY NOW</string>
    <string name="addtocart">ADD TO CART</string>
    <string name="description">Description</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="signout">Sign Out</string>
    <string name="email_address">Email Address</string>
    <string name="guest">Guest</string>
    <string name="moremerchnat">More Merchants</string>
    <string name="rating">Rating</string>
    <string name="total">Total Amount</string>
    <string name="search_hint">Search for the product eg; Mug red</string>
    <string name="color">Color :</string>
    <string name="theme">Theme :</string>
    <string name="size">Size :</string>
    <string name="seller">Selected Seller :</string>
    <string name="history">LogIn History</string>
    <string name="loginHistory">Login History</string>
    <string name="orderHistory">Order History</string>

    <string name="facebook_app_id">127131675132171</string>
    <string name="fb_login_protocol_scheme">fb127131675132171</string>
    <string name="continueShopping">Continue Shopping!</string>

</resources>
